// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/constellations/ContentBlock/Copy renders <ContentBlockCopy /> with a CTA 1`] = `
<div
  class="withStyles-u5urts-0 efexQC"
>
  <h2
    class="withStyles-u5urts-0 jLXugA"
  >
    About Us
  </h2>
  <div
    class="withStyles-u5urts-0 cjEcvK"
  >
    <p>
      We are a LGBT friendly league. It’s a very competitive league so bring your A-game.
    </p>
  </div>
  <a
    class="withStyles-u5urts-0 gqQEcA"
    href="/about"
    type="primary"
  >
    LEARN MORE
  </a>
</div>
`;

exports[`components/constellations/ContentBlock/Copy renders <ContentBlockCopy /> without a CTA 1`] = `
<div
  class="withStyles-u5urts-0 efexQC"
>
  <h2
    class="withStyles-u5urts-0 jLXugA"
  >
    Mission Statement
  </h2>
  <div
    class="withStyles-u5urts-0 cjEcvK"
  >
    <p>
       The Metro Detroit Flag Football League (MDFFL) is an LGBT and straight allied flag football league, changing preconceived societal beliefs about sexual orientation and self-identification. 
    </p>
  </div>
</div>
`;
